# Elite_Robots_CS_SDK_CSharp

./: .gitignore  API.cn.md  API.md  ChangeLog.cn.md  ChangeLog.md  Directory.Build.targets  Elite_Robots_CS_SDK_CSharp.sln  README.cn.md  README.md  README_CN.md  USAGE.md
doc/API/cn/: API.cn.md  ControllerLog.cn.md  Dashboard.cn.md  EliteDriver.cn.md  EliteDriverConfig.cn.md  KinematicsBase.cn.md  Log.cn.md  PoseAlgebraBase.cn.md  PrimaryPort.cn.md  RTSI.cn.md  RemoteUpgrade.cn.md  RobotException.cn.md  SerialCommunication.cn.md  VersionInfo.cn.md
doc/API/en/: API.en.md  ControllerLog.en.md  Dashboard.en.md  EliteDriver.en.md  EliteDriverConfig.en.md  KinematicsBase.en.md  Log.en.md  PoseAlgebraBase.en.md  PrimaryPort.en.md  RTSI.en.md  RemoteUpgrade.en.md  RobotException.en.md  SerialCommunication.en.md  VersionInfo.en.md
doc/BuildGuide/: BuildGuide.cn.md  BuildGuide.en.md
doc/UserGuide/: UserGuide.cn.md  UserGuide.en.md
example/: Program.cs  connect_robot_test.cs  example.csproj  example_c_minimal_control.c  example_dashboard_client.cs  example_driver.cs  example_kinematics.cs  example_pose_algebra.cs  example_primary_client.cs  example_rtsi_client.cs  example_serial.cs  example_servoj_plan.cs  example_speedl.cs  example_trajectory.cs
example/Properties/: launchSettings.json
example/resource/: input_recipe.txt  output_recipe.txt
scripts/: bootstrap-native.ps1  bootstrap-native.sh
src/: DashboardClientInterface.cs  DriverTypes.cs  EliteDriver.cs  EliteDriverConfig.cs  EliteSdkException.cs  EliteUtilities.cs  KinematicsBase.cs  NativeMethods.Extra.cs  NativeMethods.Rtsi.cs  NativeMethods.cs  PoseAlgebraBase.cs  PrimaryClientInterface.cs  PrimaryTypes.cs  RobotExceptions.cs  RobotStateEnums.cs  RtsiClientInterface.cs  RtsiIoInterface.cs  RtsiIoTypes.cs  RtsiTypes.cs  elite_cs_sdk.csproj  elite_cs_sdk.targets
src/wrapper_c/: CMakeLists.txt
src/wrapper_c/include/: Elite_C_Types.h  Elite_Sdk_C.h
src/wrapper_c/include/Dashboard/: DashboardClient_C.hpp
src/wrapper_c/include/Elite/: ControllerLog_C.hpp  EliteDriver_C.h  Log_C.hpp  RemoteUpgrade_C.hpp  SerialCommunication_C.hpp  VersionInfo_C.hpp
src/wrapper_c/include/Primary/: PrimaryPortInterface_C.hpp
src/wrapper_c/include/Rtsi/: Elite_Rtsi_C.h
src/wrapper_c/source/Dashboard/: DashboardClient_C.cpp
src/wrapper_c/source/Elite/: ControllerLog_C.cpp  EliteDriver_C.cpp  Log_C.cpp  RemoteUpgrade_C.cpp  SerialCommunication_C.cpp  SerialCommunication_Internal.hpp  VersionInfo_C.cpp
src/wrapper_c/source/Primary/: PrimaryPortInterface_C.cpp
src/wrapper_c/source/Rtsi/: RtsiClientInterface_C.cpp  RtsiIoInterface_C.cpp  RtsiRecipeInternal_C.cpp  RtsiRecipeInternal_C.hpp
src/wrapper_csharp/: elite_cs_sdk.csproj
src/wrapper_csharp/src/: DashboardClientInterface.cs  DriverTypes.cs  EliteDriver.cs  EliteDriverConfig.cs  EliteUtilities.cs  NativeMethods.Rtsi.cs  NativeMethods.cs  PrimaryClientInterface.cs  PrimaryTypes.cs  RobotExceptions.cs  RobotStateEnums.cs  RtsiClientInterface.cs
